--- a/main.qsf
+++ b/main.qsf
@@ -60,8 +60,9 @@ set_global_assignment -name SYSTEMVERILOG_FILE VGA/contador_vertical.sv
 set_global_assignment -name SYSTEMVERILOG_FILE VGA/controlador_vga.sv
 set_global_assignment -name SYSTEMVERILOG_FILE VGA/mostrar_imagen.sv
 set_global_assignment -name SYSTEMVERILOG_FILE VGA/sincronizador.sv
-set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
 set_global_assignment -name MIF_FILE Memory/image.mif
+set_global_assignment -name QIP_FILE Memory/drom.qip
+set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
