--- a/main.qsf
+++ b/main.qsf
@@ -98,4 +98,6 @@ set_location_assignment PIN_AB30 -to reset
 set_global_assignment -name SYSTEMVERILOG_FILE VGA/contador_cuadrante.sv
 set_location_assignment PIN_AJ4 -to button
 set_location_assignment PIN_AA30 -to start
+set_global_assignment -name MIF_FILE Memory/result.mif
+set_global_assignment -name QIP_FILE Memory/dram.qip
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
