--- a/CPU/cpu.qsf
+++ b/CPU/cpu.qsf
@@ -51,6 +51,24 @@ set_global_assignment -name EDA_TIME_SCALE "1 ps" -section_id eda_simulation
 set_global_assignment -name EDA_OUTPUT_DATA_FORMAT "VERILOG HDL" -section_id eda_simulation
 set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "23 MM HEAT SINK WITH 200 LFPM AIRFLOW"
 set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
+set_global_assignment -name EDA_TEST_BENCH_ENABLE_STATUS TEST_BENCH_MODE -section_id eda_simulation
+set_global_assignment -name EDA_NATIVELINK_SIMULATION_TEST_BENCH cpu_tb -section_id eda_simulation
+set_global_assignment -name EDA_TEST_BENCH_NAME cpu_tb -section_id eda_simulation
+set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id cpu_tb
+set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME cpu_tb -section_id cpu_tb
+set_global_assignment -name EDA_TEST_BENCH_FILE cpu_tb.sv -section_id cpu_tb
+set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
+set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
+set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
+set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
+set_global_assignment -name MIF_FILE Memory/image.mif
+set_global_assignment -name MIF_FILE Memory/result.mif
+set_global_assignment -name QIP_FILE Memory/dram.qip
+set_global_assignment -name VERILOG_FILE Memory/dram.v
+set_global_assignment -name VERILOG_FILE Memory/dram_bb.v
+set_global_assignment -name QIP_FILE Memory/drom.qip
+set_global_assignment -name VERILOG_FILE Memory/drom.v
+set_global_assignment -name VERILOG_FILE Memory/drom_bb.v
 set_global_assignment -name HEX_FILE memfile.hex
 set_global_assignment -name SYSTEMVERILOG_FILE ALU.sv
 set_global_assignment -name SYSTEMVERILOG_FILE ALU_Decoder.sv
@@ -72,16 +90,6 @@ set_global_assignment -name SYSTEMVERILOG_FILE Sign_Extend.sv
 set_global_assignment -name SYSTEMVERILOG_FILE Writeback_Cycle.sv
 set_global_assignment -name SYSTEMVERILOG_FILE cpu.sv
 set_global_assignment -name SYSTEMVERILOG_FILE cpu_tb.sv
-set_global_assignment -name EDA_TEST_BENCH_ENABLE_STATUS TEST_BENCH_MODE -section_id eda_simulation
-set_global_assignment -name EDA_NATIVELINK_SIMULATION_TEST_BENCH cpu_tb -section_id eda_simulation
-set_global_assignment -name EDA_TEST_BENCH_NAME cpu_tb -section_id eda_simulation
-set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id cpu_tb
-set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME cpu_tb -section_id cpu_tb
 set_global_assignment -name MIF_FILE instrMEM.mif
 set_global_assignment -name QIP_FILE instrROM.qip
-set_global_assignment -name EDA_TEST_BENCH_FILE cpu_tb.sv -section_id cpu_tb
-set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
-set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
-set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
 set_global_assignment -name HEX_FILE cpu.hex
-set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
